# naxos

./: .clang-format  .codedocs  .doxyfile  .gitignore  .gitmodules  .travis.yml  CITATION.cff  COPYRIGHT  README.md  appveyor.yml
.github/workflows/: functional_tests.yml  unit_tests.yml  windows.yml
amorgos/: CMakeLists.txt  amorgos.h  boundedbt.cpp  boundedbt.h  credit.cpp  credit.h  dbds.cpp  dbds.h  dbs.cpp  dbs.h  dfs.cpp  dfs.h  domain_splitting.cpp  domain_splitting.h  fns.cpp  fns.h  gns.cpp  gns.h  heuristics.cpp  heuristics.h  ibroad.cpp  ibroad.h  isamp.cpp  isamp.h  lan.cpp  lan.h  lds.cpp  lds.h  onesamp.cpp  onesamp.h  pops.cpp  pops.h  rdfs.cpp  rdfs.h
amorgos/apps/: Makefile  cryptmult.cpp  golfer.cpp  graphcolor.cpp  knump.cpp  magic.cpp  mapcolor.cpp  nqueens.cpp  placement.cpp  sudoku.cpp  vertexcover.cpp
apps/: CMakeLists.txt  Makefile  README.md  nqueens.cpp  send_more_money.cpp
apps/ACvsBC/: ACvsBC.plt  CREW_SCHEDULING.cpp  HA30.pl  MAGIC.cpp  Makefile  NQUEENS.cpp  README.md  TSP.cpp  crew_scheduling.cpp  experiments.sh  magic.cpp  magic_square.cpp  nqueens.cpp  ratios_times.plt  strtok.h  trade-off.plt  tsp.cpp  verification.sh
apps/ACvsBC/OR-Library/: NW08.txt  NW10.txt  NW12.txt  NW15.txt  NW20.txt  NW21.txt  NW22.txt  NW23.txt  NW25.txt  NW26.txt  NW28.txt  NW32.txt  NW34.txt  NW37.txt  NW38.txt  NW39.txt  NW40.txt  NW41.txt  NW42.txt  NW43.txt  README.md
apps/ACvsBC/core-arc-consistency/: README.md  constraints.cpp  expressions.cpp  intvar.cpp  naxos.h  problemmanager.cpp  queue.h  stack.h
apps/CELAR/: CMakeLists.txt  Makefile  README.md  celar.blurb  celar.cpp  heuristics.cpp  heuristics.h  verification.sh
apps/CELAR/SCEN06/: ctr.txt  sol.txt  var.txt
apps/CELAR/SCEN07/: cst.txt  ctr.txt  sol.txt  var.txt
apps/CELAR/SCEN08/: cst.txt  ctr.txt  sol.txt  var.txt
apps/CELAR/SCEN09/: cst.txt  dom.txt  sol.txt
apps/CELAR/SCEN10/: cst.txt  ctr.txt  sol.txt  var.txt
apps/Hadoop/: CMakeLists.txt  README.md  nqueens.cpp  numpart.cpp  progress.plt  rounds.sh
apps/Hadoop/install/: README.md  update.sh
apps/ITC/: CMakeLists.txt  Makefile  README.md  error.h  heuristics.cpp  heuristics.h  io.cpp  localSearch.cpp  localSearch.h  optionsFile  timetabling.cpp  timetabling.h
apps/ITC/datasets/: benchmark_my_linux_machine  benchmarkinput.ttp
apps/ITC/verification/: test.sh  validator.cc
apps/XCSP3/: CMakeLists.txt  Makefile  README.md  naxos-xcsp3-test.cpp  naxos-xcsp3.cpp  nqueens.cpp  translator.cpp  translator.h  verification.sh  xcsp3.h
apps/XCSP3/verification/: AllConstraints.xml  AllConstraintsFormatted.xml  AllDifferent.sol  AllDifferent.xml  Arrays.sol  Arrays.xml  COP.sol  COP.xml  COP_MaxCoeffs_Maximization.sol  COP_MaxCoeffs_Maximization.xml  COP_MaxCoeffs_Minimization.sol  COP_MaxCoeffs_Minimization.xml  COP_Max_Maximization.sol  COP_Max_Maximization.xml  COP_Max_Minimization.sol  COP_Max_Minimization.xml  COP_Maximization.xml  COP_MinCoeffs_Maximization.sol  COP_MinCoeffs_Maximization.xml  COP_MinCoeffs_Minimization.sol  COP_MinCoeffs_Minimization.xml  COP_Min_Maximization.sol  COP_Min_Maximization.xml  COP_Min_Minimization.sol  COP_Min_Minimization.xml  COP_SumCoeffs_Maximization.sol  COP_SumCoeffs_Maximization.xml  COP_SumCoeffs_Minimization.sol  COP_SumCoeffs_Minimization.xml  COP_Sum_Maximization.sol  COP_Sum_Maximization.xml  COP_Sum_Minimization.sol  COP_Sum_Minimization.xml  COP_maximization.sol  CheckerFastInstances.txt  CheckerInstances.txt  CheckerInstancesUnsupported.txt  CheckerSlowInstances.txt  CheckerUnsupportedInstances.txt  Element.sol  (+36 more)
apps/XCSP3/verification/without_solutions/: AllConstraints.xml
apps/for_amorgos/: CMakeLists.txt  EinsteinRiddle.cpp  README.md  cryptmult.cpp  knump.cpp  mapcolor.cpp  placement.cpp  vertexcover.cpp
apps/hadoop/: CMakeLists.txt  Makefile  README.md  nqueens.cpp  progress.plt
apps/hadoop/install/: update.sh
apps/verification/: nqueens_12_sorted_results.txt  nqueens_4_sorted_results.txt  nqueens_8_sorted_solutions.txt  send_more_money_solution.txt  test.sh
core/: CMakeLists.txt  Makefile  array_constraints.cpp  bitset_domain.cpp  expressions.cpp  internal.h  intvar.cpp  naxos-mini.h  naxos.h  non_mini_solver_constraints.cpp  non_mini_solver_expressions.cpp  problemmanager.cpp  stack.h  var_constraints.cpp
core/arc-consistency/: CMakeLists.txt  constraints.cpp  expressions.cpp  intvar.cpp  naxos.h  problemmanager.cpp  queue.h  stack.h
core/bounds-consistency/: CMakeLists.txt  Makefile  array_constraints.cpp  bitset_domain.cpp  expressions.cpp  internal.h  intvar.cpp  naxos.h  problemmanager.cpp  stack.h  var_constraints.cpp
hadoop/: Makefile  nqueens.cpp  numpart.cpp  optimisation.txt  progress.awk  rounds.sh
hadoop/install/: hadoop.patch
license/: COPYING.txt  LICENSE.txt
manual/: Arrays.md  Errors.md  Examples.md  Expressions.md  Goals.md  Introduction.md  ProblemManager.md  README.md  Variables.md  naxos.bib  naxos.tex
manual/figures/: AC.tex  NsgLabeling.tex  logo.fig
manual/logo/: logo.ps  logo.tex
naxos-beta/: Makefile  array_constraints.cpp  bitset_domain.cpp  expressions.cpp  internal.h  intvar.cpp  naxos.h  problemmanager.cpp  stack.h  var_constraints.cpp
naxos-beta/examples/: Makefile  nqueens.cpp  numpart.cpp  send_more_money.cpp
naxos-beta/for_hadoop/: rounds.sh
naxos-beta/for_hadoop/install/: install-jdk.sh  install.sh  update.sh
plugins/: CMakeLists.txt  README.md  amorgos.h  boundedbt.cpp  boundedbt.h  credit.cpp  credit.h  dbds.cpp  dbds.h  dbs.cpp  dbs.h  dfs.cpp  dfs.h  domain_splitting.cpp  domain_splitting.h  fns.cpp  fns.h  gns.cpp  gns.h  heuristics.cpp  heuristics.h  ibroad.cpp  ibroad.h  isamp.cpp  isamp.h  lan.cpp  lan.h  lds.cpp  lds.h  onesamp.cpp  onesamp.h  pops.cpp  pops.h  rdfs.cpp  rdfs.h
plugins/apps/: CMakeLists.txt  Makefile  cryptmult.cpp  golfer.cpp  graphcolor.cpp  knump.cpp  magic.cpp  nqueens.cpp  placement.cpp  sudoku.cpp  vertexcover.cpp
